diss: more fiddling with bibliogrphy ordering, assuming number of authors not relevant, but _ counting lower than uppercase and upercase lower than lowercase ('de Cooman')

--- a/bib/eigene.bib
+++ b/bib/eigene.bib
@@ -1,6 +1,6 @@
 @THESIS{Walter2006a,
   type = {Diplomarbeit (Diploma Thesis)},
-  author = {Gero Walter},
+  author = {Walter, G.},
   year = 2006,
   title = {{Robuste Bayes-Regression mit Mengen von Prioris --- Ein Beitrag zur Statistik unter komplexer Unsicherheit}},
   school = {Department of Statistics, LMU Munich},
@@ -8,7 +8,8 @@
 }
 
 @INPROCEEDINGS{Walter2007a,
-  author = {Gero Walter and Thomas Augustin and Annette Peters},
+  longauthor = {Gero Walter and Thomas Augustin and Annette Peters},
+  author = {Walter, G. and Augustin, T. and Peters, A.},
   editor = {Gert de Cooman and Ji\v{r}ina Vejnarov\'{a} and Marco Zaffalon},
   year = 2007,
   title = {Linear Regression Analysis under Sets of Conjugate Priors},
@@ -21,7 +22,7 @@
 }
 
 @misc{Walter2007b,
-    Author = {Gero Walter},
+    Author = {Walter, G.},
     Title = {The Normal Regression Model as a {LUCK}-model},
     Howpublished = {Discussion Paper. \url{http://www.stat.uni-muenchen.de/~thomas/team/isipta07_proof.pdf}},
     Year = {2007}
@@ -35,7 +36,7 @@
 }
 
 @article{Walter2009a,
-    Author = {Gero Walter and Thomas Augustin},
+    Author = {Walter, G. and Augustin, T.},
     Title = {Imprecision and Prior-data Conflict in Generalized {B}ayesian Inference},
     Journal = {Journal of Statistical Theory and Practice},
     Pages = {255--271},
@@ -77,7 +78,7 @@
 }
 
 @TECHREPORT{Walter2009b,
-  author = {Gero Walter and Thomas Augustin},
+  author = {Walter, G. and Augustin, T.},
   year = 2009,
   title = {{B}ayesian linear regression --- different conjugate models and their (in)sensitivity to prior-data conflict},
   number = 69,
@@ -88,7 +89,7 @@
 }
 
 @INCOLLECTION{Walter2010a,
-  author = {Gero Walter and Thomas Augustin},
+  author = {Walter, G. and Augustin, T.},
   editor = {Thomas Kneib and Gerhard Tutz},
   year = 2010,
   title = {{B}ayesian linear regression --- different conjugate models and their (in)sensitivity to prior-data conflict},
@@ -115,7 +116,7 @@
 }
 
 @INPROCEEDINGS{Walter2011a,
-  author = {Gero Walter and Thomas Augustin and Frank Coolen},
+  author = {Walter, G. and Augustin, T and Coolen, F.},
   longeditor = {Frank P. A. Coolen and Gert de Cooman and Thomas Fetz and Michael Oberguggenberger},
   editor = {Frank Coolen and Gert de Cooman and Thomas Fetz and Michael Oberguggenberger},
   year = 2011,
@@ -142,7 +143,7 @@
 }
 
 @TECHREPORT{Walter2012b,
-  author = {Gero Walter},
+  author = {Walter, G.},
   year = 2012,
   title = {A Technical Note on the {Dirichlet-Multinomial} Model --- The {Dirichlet} Distribution as the Canonically Constructed Conjugate Prior},
   number = 131,
@@ -175,8 +176,8 @@
 }
 
 @incollection{itip-statinf,
-    longauthor    = "Thomas Augustin and Gero Walter and Frank P. A. Coolen",
-    author    = "Thomas Augustin and Gero Walter and Frank Coolen",
+    longauthor    = "Thomas Augustin and Gero Walter and Frank Coolen",
+    author    = "Augustin, Thomas and Walter, G. and Coolen, F.",
     title     = "Statistical Inference",
     booktitle = "Introduction to Imprecise Probabilities",
     publisher = "Wiley",
@@ -193,12 +194,12 @@
     year      = "2013",
     note      = "In preparation",
     longeditor    = "Thomas Augustin and Frank P. A. Coolen and Gert de Cooman and Matthias C. M. Troffaes",
-    editor    = "Thomas Augustin and Frank Coolen and Gert de Cooman and Matthias Troffaes",
+    editor    = "Augustin, T. and Coolen, F. and de Cooman, G. and Troffaes, M.",
 }
 
 @misc{luck-package,
   title={\texttt{\upshape luck}: \textbf{R} package for Generalized iLUCK-models},
-  author={Walter, Gero and Krautenbacher, Norbert},
+  author={Walter, G. and Krautenbacher, N.},
   year={2013},
   url={http://luck.r-forge.r-project.org/},
   keywords = {defensethesis},
