--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -537,7 +537,7 @@ Pages = {342--368},
 }
 
 @InProceedings{2009:augustin-hable,
-    author = {Thomas Augustin and Robert Hable},
+    author = {Augustin, T. and Hable, R.},
     editor = {Hitoshi Furuta, Dan Frangopol, Masanobu Shinozuka},
      title = {On the impact of robust statistics on imprecise probability models: a review},
  booktitle = {Safety, Reliability and Risk of Structures, Infrastructures and Engineering Systems.
