diss: starting danksagung

--- a/danksagung.tex
+++ b/danksagung.tex
@@ -3,4 +3,24 @@
 
 \chapter*{Danksagung}
 
-Danke.
+Ich möchte allen einen Dank aussprechen,
+die mich in der Zeit der Entstehung dieser Dissertation begleitet haben.
+%
+Thomas Augustin möchte ich herzlichen danken für die enge Zusammenarbeit,
+für Enthusiasmus und Ermutigungen, und ganz besonders dafür, dass er
+trotz der arbeitsintensiven administrativen Zumutungen, die über uns hereingebrochen sind,
+immer für mich Zeit gefunden hat.
+%
+Frank Coolen möchte ich für seine Einladungen nach Durham und die spannende und inspirierende Zusammenarbeit danken.
+%
+Meinen Koautoren Matthias Troffaes und Manuel Eugster für alle Hilfe und die fruchtbare Zusammenarbeit.
+
+Kollegen am Institut dafür mit den Problemem nicht allein zu sein
+Büronachbarn dafür, mein gelegentliches Grummeln zu ertragen
+
+BM, EH, CJ, die wie die anderen Mitarbeiter dafür gesorgt haben,
+dass ich mich am Institut für Statistik wie zuhause fühlen konnte.
+
+Familie
+
+Mirjam
