diss: danksagung continued

--- a/danksagung.tex
+++ b/danksagung.tex
@@ -1,26 +1,34 @@
-\addcontentsline{toc}{chapter}{\protect Danksagung}
-
-
+%\addcontentsline{toc}{chapter}{\protect Danksagung}
+\selectlanguage{ngerman}
 \chapter*{Danksagung}
 
 Ich möchte allen einen Dank aussprechen,
 die mich in der Zeit der Entstehung dieser Dissertation begleitet haben.
-%
+
 Thomas Augustin möchte ich herzlichen danken für die enge Zusammenarbeit,
 für Enthusiasmus und Ermutigungen, und ganz besonders dafür, dass er
-trotz der arbeitsintensiven administrativen Zumutungen, die über uns hereingebrochen sind,
-immer für mich Zeit gefunden hat.
-%
-Frank Coolen möchte ich für seine Einladungen nach Durham und die spannende und inspirierende Zusammenarbeit danken.
-%
-Meinen Koautoren Matthias Troffaes und Manuel Eugster für alle Hilfe und die fruchtbare Zusammenarbeit.
+trotz der arbeitsintensiven administrativen Zumutungen,
+die über ihn hereingebrochen sind, immer für mich Zeit gefunden hat.
 
-Kollegen am Institut dafür mit den Problemem nicht allein zu sein
-Büronachbarn dafür, mein gelegentliches Grummeln zu ertragen
+Frank Coolen möchte ich danken für für die spannende und inspirierende Zusammenarbeit,
+und für seine Einladungen ans Department of Mathematical Sciences in Durham,
+die mir wissenschaftliche Fortschritte und interessante Einblicke in Kunst, Natur und Kultur ermöglicht haben.
 
-BM, EH, CJ, die wie die anderen Mitarbeiter dafür gesorgt haben,
-dass ich mich am Institut für Statistik wie zuhause fühlen konnte.
+Meinen weiteren Prüfern Christian Heumann und Helmut Küchenhoff Dank für ihre Zeit und ihr Interesse;
+meinen Koautoren Matthias Troffaes und Manuel Eugster Dank für alle Hilfe und die fruchtbare Zusammenarbeit.
 
-Familie
+Herzlichen Dank an meine Kollegen in der Arbeitsgruppe für die interessanten Diskussionen, Anregungen, Feedback
+und andere gemeinsame Aktivitäten.
+Insbesondere meinen \glqq Büromitbewohnern\grqq\ möchte ich auch dafür danken,
+dass sie mein gelegentliches Grummeln ertragen haben.
 
-Mirjam
+Den Doktoranden-Kollegen am Institut Dank für die schöne gemeinsame Zeit,
+für spontane Hilfe und die Beruhigung, mit all den Doktorarbeits-Problemen nicht alleine zu sein.
+
+Bei Brigitte Maxa, Elke Höfner, Christa Jürgensonn und den Sekretariatsmitarbeiterinnen
+möchte ich mich bedanken dafür, dass sie --- wie alle anderen Kollegen --- dafür gesorgt haben,
+dass ich mich am Institut für Statistik zuhause gefühlt habe.
+
+Meiner Familie und ganz besonders Mirjam vielen vielen Dank für alles.
+\selectlanguage{english}
+
