--- a/diss.tex
+++ b/diss.tex
@@ -39,6 +39,7 @@
       {Prof.\ Dr.\ Frank P.A.\ Coolen}         % Name des Zweitgutachters
       {25.10.~2013}                            % Datum der muendlichen Pruefung
 
+  \include{danksagung}
 
   \tableofcontents
   \addcontentsline{toc}{chapter}{\protect Contents}
@@ -91,7 +92,6 @@
   
   \printbibliography[heading=bibnumbered]
 
- % \include{danksagung}
 
 
 %  \include{lebenslauf}
