diss: rest of comments Frank except abstracts, acknowledgements

--- a/diss.tex
+++ b/diss.tex
@@ -90,9 +90,10 @@
   %\bibliography{bib/eigene,bib/itip-refs,bib/other-refs}
   %\markboth{Bibliography}{Bibliography}
   
-  \printbibliography[heading=bibnumbered]
+  %\printbibliography[heading=bibnumbered]
 
-
+  \printbibliography
+  \addcontentsline{toc}{chapter}{\protect Bibliography}
 
 %  \include{lebenslauf}
 
