--- a/genbayesinf.tex
+++ b/genbayesinf.tex
@@ -278,9 +278,9 @@ acting by buying and selling gambles accordingly,
 should choose $\El$ such that there is no combination of gambles
 %$X_i$, $i=1,\ldots,k$, %of which each is, by $\El$, 
 that would result in a net loss, whatever $\omega \in \Omega$.
-As an analogy, \emph{avoiding sure loss} can be regarded
+As an analogy, to violate \emph{avoiding sure loss} can be regarded
 like a logical inconsistency in a set of propositions,
-i.e., there exist two propositions in the set of propositions
+i.e., there exist at least two propositions in the set of propositions
 (the analogy to $\El$) which are contradictory
 \parencite[\S 2.4, footnote~1]{1991:walley}.
 
