--- a/isipta11.tex
+++ b/isipta11.tex
@@ -1069,7 +1069,7 @@ to ensure that the resulting maximum
 imprecision cannot exceed the same threshold level is substantially less
 than had been the case before any data were available.
 This would be in line with intuition, and further
-research into this and related aspects is ongoing, including of
+research towards this and related aspects seems promising, including of
 course the further data need in case first sampled data is in
 conflict with $(n^i,s^i)$, and the behaviour of the models of Section~\ref{sec:ibbm} in such cases.
 
