--- a/appendix1.tex
+++ b/appendix1.tex
@@ -1269,10 +1269,9 @@ As all transformations are linear, the passing from $\bs{m}({\cal Y}\uz_1)$ to $
 Finally, $n\uz$ has to be varied along the lines of Walter \& Augustin (2009, Section~4), to allow proper handling of prior data conflict.
 \fi
 
-\subsubsection*{Acknowledgements}
-
-The authors are very grateful to Erik Quaeghebeur and Frank Coolen for intensive discussions on foundations of generalised Bayesian
-inference, and to Thomas Kneib for help at several stages of writing this paper.
+%\subsubsection*{Acknowledgements}
+%The authors are very grateful to Erik Quaeghebeur and Frank Coolen for intensive discussions on foundations of generalised Bayesian
+%inference, and to Thomas Kneib for help at several stages of writing this paper.
 
 
 
