--- a/danksagung.tex
+++ b/danksagung.tex
@@ -1,4 +1,6 @@
 %\addcontentsline{toc}{chapter}{\protect Danksagung}
+
+%\twocolumn
 \selectlanguage{ngerman}
 \chapter*{Danksagung}
 
@@ -15,7 +17,8 @@ und für seine Einladungen ans Department of Mathematical Sciences in Durham,
 die mir wissenschaftliche Fortschritte und interessante Einblicke in Kunst, Natur und Kultur ermöglicht haben.
 
 Meinen weiteren Prüfern Christian Heumann und Helmut Küchenhoff Dank für ihre Zeit und ihr Interesse;
-meinen Koautoren Matthias Troffaes und Manuel Eugster Dank für alle Hilfe und die fruchtbare Zusammenarbeit.
+meinen Koautoren Matthias Troffaes und Manuel Eugster Dank für alle Hilfe und die fruchtbare Zusammenarbeit;
+den Reviewern der in diese Arbeit eingeflossenen Artikel herzlichen Dank für ihre hilfreichen und anregenden Anmerkungen.
 
 Herzlichen Dank an meine Kollegen in der Arbeitsgruppe für die interessanten Diskussionen, Anregungen, Feedback
 und andere gemeinsame Aktivitäten.
@@ -29,6 +32,34 @@ Bei Brigitte Maxa, Elke Höfner, Christa Jürgensonn und den Sekretariatsmitarbe
 möchte ich mich bedanken dafür, dass sie --- wie alle anderen Kollegen --- dafür gesorgt haben,
 dass ich mich am Institut für Statistik zuhause gefühlt habe.
 
-Meiner Familie und ganz besonders Mirjam vielen vielen Dank für alles.
+Meiner Familie und ganz besonders Mirjam vielen vielen Dank für alles.\\
+
 \selectlanguage{english}
+\chapter*{Acknowledgements}
+I would like to express my gratitude for everyone who stood by me while I was writing this thesis.
+
+Many thanks to Thomas Augustin for his close collaboration, inspiring enthusiasm and constant encouragement.
+Despite the heavy load of administrative challenges you had to juggle, thank you for always finding time for me. 
+
+I would like to thank Frank Coolen for his fascinating and inspiring collaboration and his invitations
+to the Department of Mathematical Sciences in Durham
+that helped me advance scientifically and gave me fascinating new insights into art, nature, and culture.
+
+Thank you also to my other examiners, Christian Heumann and Helmut Küchenhoff, for their time and interest.
+Many thanks to my coauthors Matthias Troffaes and Manuel Eugster for their help and fruitful teamwork.
+I would also like to thank the reviewers of the papers I included in this thesis for their very stimulating and helpful comments.
+
+Thank you very much to my work group colleagues for the support, the animated discussions,
+the feedback and for all the other things we did together.
+I would especially like to thank my office mates for putting up with my occasional muttering.
+
+To my fellow doctoral students at the department,
+a warm thank you for the time spent together and for the reassurance provided when the inevitable obstacles and doubts came up.
+
+Thank you Brigitte Maxa, Elke Höfner, Christa Jürgensonn and the secretaries,
+for making me feel at home at the department, much like all the other members of staff.
+
+To my family and Mirjam, thank you very, very much for everything.   
+
+%\onecolumn
 
