--- a/isipta11.tex
+++ b/isipta11.tex
@@ -1195,9 +1195,8 @@ $\nz$ in the IBBM to take on negative values, opening up a rich
 field for research and discussions.
 
 
-\subsubsection*{Acknowledgements}%\vspace*{-1.0ex}%
-
-The authors thank the referees for very helpful comments.
+%\subsubsection*{Acknowledgements}%\vspace*{-1.0ex}%
+%The authors thank the referees for very helpful comments.
 
 
 
