--- a/jstp.tex
+++ b/jstp.tex
@@ -1190,8 +1190,8 @@ true for robustified or generalised Bayesian methods, although these
 may hide this shortcoming better. One could argue, therefore, that
 they cannot be used to represent learning.''
 
-\subsubsection*{Acknowledgements}
-The authors would like to thank two anonymous referees for their very stimulating comments.
+%\subsubsection*{Acknowledgements}
+%The authors would like to thank two anonymous referees for their very stimulating comments.
 
 
 
