--- a/danksagung.tex
+++ b/danksagung.tex
@@ -5,19 +5,19 @@
 \chapter*{Danksagung}
 
 Ich möchte allen einen Dank aussprechen,
-die mich in der Zeit der Entstehung dieser Dissertation begleitet haben.
+die mich während Zeit der Entstehung dieser Dissertation begleitet haben.
 
-Thomas Augustin möchte ich herzlichen danken für die enge Zusammenarbeit,
+Thomas Augustin möchte ich herzlich danken für die enge Zusammenarbeit,
 für Enthusiasmus und Ermutigungen, und ganz besonders dafür, dass er
 trotz der arbeitsintensiven administrativen Zumutungen,
 die über ihn hereingebrochen sind, immer für mich Zeit gefunden hat.
 
-Frank Coolen möchte ich danken für für die spannende und inspirierende Zusammenarbeit,
-und für seine Einladungen ans Department of Mathematical Sciences in Durham,
+Frank Coolen möchte ich danken für die spannende und inspirierende Zusammenarbeit,
+sowie für seine Einladungen ans Department of Mathematical Sciences in Durham,
 die mir wissenschaftliche Fortschritte und interessante Einblicke in Kunst, Natur und Kultur ermöglicht haben.
 
-Meinen weiteren Prüfern Christian Heumann und Helmut Küchenhoff Dank für ihre Zeit und ihr Interesse;
-meinen Koautoren Matthias Troffaes und Manuel Eugster Dank für alle Hilfe und die fruchtbare Zusammenarbeit;
+Meinen weiteren Prüfern Christian Heumann und Helmut Küchenhoff sei gedankt für ihre Zeit und ihr Interesse;
+meinen Koautoren Matthias Troffaes und Manuel Eugster Dank für ihre Hilfe und die erfolgreiche Zusammenarbeit;
 den Reviewern der in diese Arbeit eingeflossenen Artikel herzlichen Dank für ihre hilfreichen und anregenden Anmerkungen.
 
 Herzlichen Dank an meine Kollegen in der Arbeitsgruppe für die interessanten Diskussionen, Anregungen, Feedback
@@ -25,14 +25,14 @@ und andere gemeinsame Aktivitäten.
 Insbesondere meinen \glqq Büromitbewohnern\grqq\ möchte ich auch dafür danken,
 dass sie mein gelegentliches Grummeln ertragen haben.
 
-Den Doktoranden-Kollegen am Institut Dank für die schöne gemeinsame Zeit,
+Den Doktoranden-Kollegen am Institut danke ich für die schöne gemeinsame Zeit,
 für spontane Hilfe und die Beruhigung, mit all den Doktorarbeits-Problemen nicht alleine zu sein.
 
-Bei Brigitte Maxa, Elke Höfner, Christa Jürgensonn und den Sekretariatsmitarbeiterinnen
-möchte ich mich bedanken dafür, dass sie --- wie alle anderen Kollegen --- dafür gesorgt haben,
+Brigitte Maxa, Elke Höfner, Christa Jürgensonn und den Sekretariatsmitarbeiterinnen
+möchte ich danken, dass sie --- wie alle anderen Kollegen --- dafür gesorgt haben,
 dass ich mich am Institut für Statistik zuhause gefühlt habe.
 
-Meiner Familie und ganz besonders Mirjam vielen vielen Dank für alles.\\
+Meiner Familie und ganz besonders Mirjam vielen vielen Dank für all die Unterstützung.\\
 
 \selectlanguage{english}
 \chapter*{Acknowledgements}
@@ -42,7 +42,7 @@ Many thanks to Thomas Augustin for his close collaboration, inspiring enthusiasm
 Despite the heavy load of administrative challenges you had to juggle, thank you for always finding time for me. 
 
 I would like to thank Frank Coolen for his fascinating and inspiring collaboration and his invitations
-to the Department of Mathematical Sciences in Durham
+to the Department of Mathematical Sciences in Durham,
 that helped me advance scientifically and gave me fascinating new insights into art, nature, and culture.
 
 Thank you also to my other examiners, Christian Heumann and Helmut Küchenhoff, for their time and interest.
@@ -59,7 +59,7 @@ a warm thank you for the time spent together and for the reassurance provided wh
 Thank you Brigitte Maxa, Elke Höfner, Christa Jürgensonn and the secretaries,
 for making me feel at home at the department, much like all the other members of staff.
 
-To my family and Mirjam, thank you very, very much for everything.   
+To my family and Mirjam, thank you very, very much for all the support.   
 
 %\onecolumn
 
