diss: merge abstract into 3.3 intro

--- a/jstp.tex
+++ b/jstp.tex
@@ -14,21 +14,15 @@ Furthermore, the notation was changed slightly towards the one introduced in Sec
 instead of $n^{(1)}$ and $y^{(1)}$, respectively),
 and citations were updated and changed to the style employed throughout this thesis.
 
-\subsubsection*{Abstract}
-
-A great advantage of imprecise probability models over models
-based on precise, traditional probabilities is the potential to
-reflect the amount of knowledge they stand for. Consequently,
-imprecise probability models promise to offer a vivid tool for
-handling situations of prior-data conflict in (generalised) Bayesian
-inference. In this paper, we consider a general class of recently
-studied imprecise probability models, including the Imprecise
-Dirichlet Model \parencite[IDM,][]{1996:walley::idm} under prior information, and more generally the
-framework of \textcite{2005:quaeghebeurcooman} for imprecise inference in
+Here, we first study the class of imprecise probability models
+of type~(\ref{enum:modeltypes-a}) from the framework established in Section~\ref{sec:basicsetting} (see p.~\pageref{enum:rectangular}).
+As mentioned there, this type of models includes the Imprecise Dirichlet Model \parencite[IDM,][]{1996:walley::idm} under prior information,
+and more generally the framework of \textcite{2005:quaeghebeurcooman} for imprecise inference in
 canonical exponential families. We demonstrate that such models, in
 their originally proposed form, prove to be insensitive to the
-extent of prior-data conflict. We propose an extension
-reestablishing the natural relationship between knowledge and
+extent of prior-data conflict. We then propose an extension,
+namely by employing prior parameter sets of type~(\ref{enum:rectangular}),
+that reestablishes the natural relationship between knowledge and
 imprecision: the higher the discrepancy between the observed sample
 and what was expected from prior knowledge, the higher the
 imprecision in the posterior, producing cautious inferences if, and
@@ -43,8 +37,12 @@ As discussed in Sections~\ref{sec:ip-intro} and \ref{sec:motivation},
 imprecise probability %\citep{wall91,weichselberger2000,weichselberger2001,DBLP:conf/isipta/2005,DBLP:conf/isipta/2007}
 provides a powerful methodology to handle the multidimensional
 nature of uncertainty %\citep[p.1]{Klir1999}, %\sidenote{ref: Klir1999}
-neglected by the traditional concept of probability. The most common
--- closely related -- mathematical tools in that theory are
+neglected by the traditional concept of probability.
+Specifically, imprecise probability models allow to explicitely reflect the amount of knowledge they stand for,
+and thus promise to offer a vivid tool for
+handling situations of prior-data conflict in (generalised) Bayesian inference.
+
+The most common --- closely related --- mathematical tools in the theory of imprecise probability are
 non-additive set-functions, interval-valued probabilities and sets
 of classical probabilities (often called credal sets).%
 \footnote{See Section~\ref{sec:ip-main} for a short exposition of these mathematical tools and their relations.}
