diss: merge abstract into 3.5 intro

--- a/isipta11.tex
+++ b/isipta11.tex
@@ -12,24 +12,19 @@ and the addition of some comments and footnotes linking this work to other parts
 Furthermore, the notation was changed slightly to assure consistency with the rest of the material presented in this thesis.
 Specifically, the success probability in Bernoulli trials is denoted by $\theta$ instead of $p$.
 
-\subsubsection*{Abstract}
-
-By its capability to deal with the multidimensional nature of
-uncertainty, imprecise probability provides a powerful methodology
-to sensibly handle \pdc\ in Bayesian inference. When there is
-strong conflict between sample observations and prior knowledge, the posterior model should be more imprecise
-than in the situation of mutual agreement or compatibility. Focusing
-presentation on the prototypical example of Bernoulli
-trials, we discuss the ability of different approaches to deal with \pdc.
-
+Here, we discuss the ability of different approaches to deal with \pdc\
+by focussing on the prototypical example of Bernoulli trials.
 We study a generalised Bayesian setting, including Walley's Imprecise Beta-Binomial model
-and his extension to handle prior data conflict (called pdc-IBBM here).
-We investigate alternative shapes of prior parameter sets, chosen in a way that shows improved
-behaviour in the case of \pdc\ and their influence on the posterior predictive distribution.
-Thereafter we present a new approach, consisting of an
-imprecise weighting of two originally separate inferences, one of which is based on an informative
+(a model of type~(\ref{enum:modeltypes-a}) in the framework of Section~\ref{sec:basicsetting})
+and his extension to handle prior data conflict (which is of type~(\ref{enum:rectangular}), and called pdc-IBBM here).
+We then investigate a model of type~(\ref{enum:generalset}) by proposing an alternative shape for prior parameter sets,
+chosen in a way that shows improved behaviour in the case of \pdc,
+and describe its influence on the posterior predictive distribution.
+Thereafter we present a new approach (outside the framework of Section~\ref{sec:basicsetting}),
+consisting of an imprecise weighting of two originally separate inferences, one of which is based on an informative
 imprecise prior, whereas the other one is based on an uninformative imprecise prior. This approach
 deals with \pdc\ in a fascinating way.
+
 
 \subsection{Introduction}
 \label{sec:isipta11-intro}
